Add LOB OCR text extraction and indexing support