@@ -15,7 +15,6 @@ import static com.databasepreservation.common.client.ViewerConstants.SOLR_ROWS_T
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -44,7 +43,6 @@ import com.databasepreservation.common.server.index.schema.AbstractSolrCollectio
 import com.databasepreservation.common.server.index.schema.CopyField;
 import com.databasepreservation.common.server.index.schema.Field;
 import com.databasepreservation.common.server.index.schema.SolrBootstrapUtils;
-import com.databasepreservation.common.server.index.schema.SolrCollection;
 import com.databasepreservation.common.server.index.schema.SolrRowsCollectionRegistry;
 import com.databasepreservation.common.server.index.utils.SolrUtils;
 
@@ -73,7 +71,18 @@ public class RowsCollection extends AbstractSolrCollection<ViewerRow> {
 
   @Override
   public List<CopyField> getCopyFields() {
-    return Collections.singletonList(SolrCollection.getCopyAllToSearchField());
+    return List.of(
+      new CopyField(ViewerConstants.SOLR_INDEX_ROW_LOB_COLUMN_NAME_PREFIX + ViewerConstants.INDEX_WILDCARD,
+        Field.FIELD_SEARCH),
+      new CopyField(ViewerConstants.SOLR_ROWS_NESTED_COL + ViewerConstants.SOLR_INDEX_ROW_LOB_COLUMN_NAME_PREFIX
+        + ViewerConstants.INDEX_WILDCARD, Field.FIELD_SEARCH),
+      new CopyField(ViewerConstants.SOLR_INDEX_ROW_COLUMN_NAME_PREFIX + ViewerConstants.INDEX_WILDCARD,
+        Field.FIELD_SEARCH),
+      new CopyField(ViewerConstants.SOLR_ROWS_NESTED_COL + ViewerConstants.SOLR_INDEX_ROW_COLUMN_NAME_PREFIX
+        + ViewerConstants.INDEX_WILDCARD, Field.FIELD_SEARCH),
+      new CopyField("*_nst", Field.FIELD_SEARCH),
+      new CopyField(ViewerConstants.INDEX_WILDCARD + ViewerConstants.SOLR_INDEX_ROW_LOB_COLUMN_OCR_TEXT_SUFFIX,
+        Field.FIELD_LOB_TEXT_SEARCH));
   }
 
   @Override
@@ -83,6 +92,7 @@ public class RowsCollection extends AbstractSolrCollection<ViewerRow> {
     fields.add(new Field(SOLR_ROWS_DATABASE_UUID, Field.TYPE_STRING).setIndexed(true).setStored(true));
     fields.add(new Field(SOLR_ROWS_TABLE_ID, Field.TYPE_STRING).setIndexed(true).setStored(true));
     fields.add(new Field(SOLR_ROWS_TABLE_UUID, Field.TYPE_STRING).setIndexed(true).setStored(true));
+    fields.add(new Field(Field.FIELD_LOB_TEXT_SEARCH, Field.TYPE_TEXT).setStored(false).setMultiValued(true));
 
     return fields;
   }
@@ -228,8 +238,9 @@ public class RowsCollection extends AbstractSolrCollection<ViewerRow> {
 
         Object mimeTypeObj = doc.get(ViewerCelllUtils.getMimeTypeSolrName(columnName));
         Object fileExtensionObj = doc.get(ViewerCelllUtils.getFileExtensionSolrName(columnName));
-        ViewerLobStoreType storeType = SolrUtils.objectToEnum(doc.get(ViewerCelllUtils.getStoreTypeSolrColumnName(columnName)),
-          ViewerLobStoreType.class, ViewerLobStoreType.INTERNALLY);
+        ViewerLobStoreType storeType = SolrUtils.objectToEnum(
+          doc.get(ViewerCelllUtils.getStoreTypeSolrColumnName(columnName)), ViewerLobStoreType.class,
+          ViewerLobStoreType.INTERNALLY);
 
         if (mimeTypeObj != null && fileExtensionObj != null) {
           viewerCell = Optional
